# r-hta-2023

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  aa_run.R  aa_run.py  functions.R  functions.py  hta.R  hta.py  poetry.toml  pyproject.toml
.github/workflows/: lintr.yaml  pylint.yml
tests/: __init__.py  test_r_hta.py
